[package]
name = "zerolang"
version = "0.1.0"
edition = "2021"
description = "Agent-to-Agent programming language"
license = "Apache-2.0"

[[bin]]
name = "zero"
path = "src/main.rs"

[dependencies]
capnp = "0.20"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }

# New dependencies for trading applications
rust_decimal = "1.33"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# WebSocket for streaming (Agent #6 extension)
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Cron parsing for TimerNode (Agent #6 extension)
cron = "0.12"

# Time utilities (Agent #6 extension)
chrono = "0.4"
num-bigint = "0.4.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[build-dependencies]
capnpc = "0.20"
