[package]
name = "zerolang-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.zerolang]
path = ".."

[[bin]]
name = "fuzz_parse_verify"
path = "fuzz_targets/fuzz_parse_verify.rs"
test = false
doc = false
bench = false

[profile.release]
debug = true
